--- a/src/pages/ProfileEdit.css
+++ b/src/pages/ProfileEdit.css
@@ -1,5 +1,4 @@
 .profile-edit-container {
-  background-color: #131316;
   max-width: 120rem;
   margin: auto;
   min-height: 80rem;
@@ -28,4 +27,37 @@
   font-size: 1.6rem;
   margin-bottom: 2rem;
   /* box-shadow: 0 1.4rem 1.8rem rgba(0, 0, 0, 0.2); */
+}
+
+/**************************/
+/* BELOW 1200px (Landscape Tablets) */
+/**************************/
+@media (max-width: 75em) {
+  .profile-edit-container {
+    margin-top: -3.5rem;
+  }
+}
+
+/**************************/
+/* BELOW 1000px (Landscape Tablets) */
+/**************************/
+@media (max-width: 63em) {
+  .profile-edit-container {
+    margin-top: -3.5rem;
+  }
+  .edit-img {
+  height: 78vh;
+  border-radius: 10px;
+  margin-left: 3rem;
+}
+
+.profile-edit {
+  margin-left: 0;
+}
+}
+
+@media (max-width: 34em) {
+.edit-img {
+display: none;
+}
 }
