--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -138,4 +138,54 @@ button:visited {
   transition: all 0.3s;
 }
 
+@media (max-width: 75em) {
+  html {
+    /* 9px / 16px  */
+    font-size: 56.25%;
+  }
+}
 
+/**************************/
+/* BELOW 544px (Phones) */
+/**************************/
+
+@media (max-width: 34em) {
+.boy-img {
+display: none;
+}
+
+.login-container {
+    display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-template-rows: 1fr;
+    align-content: center;
+  justify-content: center;
+  justify-items: center;
+}
+
+h1 {
+  text-align: center;
+}
+
+.form-box {
+  margin-top: 6rem;
+  border: 1px solid #D90429;
+  
+  flex-direction: column;
+  background-color: rgba(178, 170, 174, 0.1);
+  -webkit-box-shadow:0px 0px 21px 0px rgba(205,207,206,0.41);
+  -moz-box-shadow: 0px 0px 21px 0px rgba(205,207,206,0.41);
+  box-shadow: 0px 0px 21px 0px rgba(205,207,206,0.21);
+  border-radius: 10px;
+  padding: 2rem;
+  min-width: 45rem;
+}
+
+.login-box {
+ width: auto ;
+}
+
+.logo {
+  padding-top: 15%;
+}
+}  
