ajuste do css para mobile

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -100,3 +100,20 @@
   padding-right: 3rem;
 }
 }
+
+/**************************/
+/* BELOW 414px (Phones) */
+/**************************/
+
+@media (max-width: 26em) {
+  .link-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-right: 2rem;
+  }
+
+  .header-link {
+    padding: 0;
+  }
+}
