--- a/src/pages/Favorites.css
+++ b/src/pages/Favorites.css
@@ -23,3 +23,10 @@
     margin: 0 auto;
   }
 }
+
+/**************************/
+/* BELOW 414px (iphone 8Plus) */
+/**************************/
+@media (max-width: 26em) {
+  
+}
