--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -31,3 +31,18 @@
   padding-right: 3rem;
   gap: 1.5rem;
 }
+
+/**************************/
+/* BELOW 414px (iphone 8Plus) */
+/**************************/
+@media (max-width: 26em) {
+
+.copyright {
+  padding: 0 0 0 2rem;
+}
+
+.social-container {
+  padding-right: 1rem;
+  gap: 1.5rem;
+}
+}
