--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -83,9 +83,9 @@ label {
 } 
 
 textarea:focus, input:focus, input, select:focus {
-    box-shadow: 0 0 0 0;
-    border: 0 none;
-    outline: 0;
+  box-shadow: 0 0 0 0;
+  border: 0 none;
+  outline: 0;
 }
 
 .input-login {
@@ -150,42 +150,52 @@ button:visited {
 /**************************/
 
 @media (max-width: 34em) {
-.boy-img {
-display: none;
-}
+  .boy-img {
+    display: none;
+  }
 
-.login-container {
+  .login-container {
     display: grid;
-  grid-template-columns: repeat(1, 1fr);
-  grid-template-rows: 1fr;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: 1fr;
     align-content: center;
-  justify-content: center;
-  justify-items: center;
-}
+    justify-content: center;
+    justify-items: center;
+  }
 
-h1 {
-  text-align: center;
-}
+  h1 {
+    text-align: center;
+  }
 
-.form-box {
-  margin-top: 6rem;
-  border: 1px solid #D90429;
+  .form-box {
+    margin-top: 6rem;
+    border: 1px solid #D90429;
   
-  flex-direction: column;
-  background-color: rgba(178, 170, 174, 0.1);
-  -webkit-box-shadow:0px 0px 21px 0px rgba(205,207,206,0.41);
-  -moz-box-shadow: 0px 0px 21px 0px rgba(205,207,206,0.41);
-  box-shadow: 0px 0px 21px 0px rgba(205,207,206,0.21);
-  border-radius: 10px;
-  padding: 2rem;
-  min-width: 45rem;
-}
+    flex-direction: column;
+    background-color: rgba(178, 170, 174, 0.1);
+    -webkit-box-shadow:0px 0px 21px 0px rgba(205,207,206,0.41);
+    -moz-box-shadow: 0px 0px 21px 0px rgba(205,207,206,0.41);
+    box-shadow: 0px 0px 21px 0px rgba(205,207,206,0.21);
+    border-radius: 10px;
+    padding: 2rem;
+    min-width: 45rem;
+  }
 
-.login-box {
- width: auto ;
-}
+  .login-box {
+    width: auto ;
+  }
 
-.logo {
-  padding-top: 15%;
-}
+  .logo {
+    padding-top: 15%;
+  }
 }  
+
+/**************************/
+/* BELOW 414px (Phones) */
+/**************************/
+
+@media (max-width: 26em) {
+  .form-box {
+    min-width: 35rem;
+  }
+}
