--- a/src/pages/Search.css
+++ b/src/pages/Search.css
@@ -53,6 +53,11 @@ label {
   padding-top: 0;
 }
 
+.h2-container {
+  margin-top: 3rem;
+ text-align: center;
+}
+
 .search-profile-box {
   display: flex;
   align-items: center;
@@ -79,7 +84,7 @@ label {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   justify-content: center;
-  padding: 0 3rem;
+  /* padding: 0 3rem; */
 }
 
 .search-name {
