ajuste do css para mobile pag de search

--- a/src/pages/Favorites.css
+++ b/src/pages/Favorites.css
@@ -25,8 +25,17 @@
 }
 
 /**************************/
+/* BELOW 544px (Phones) */
+/**************************/
+
+@media (max-width: 34em) {
+
+
+}
+
+/**************************/
 /* BELOW 414px (iphone 8Plus) */
 /**************************/
 @media (max-width: 26em) {
-  
+
 }
